--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div class="homepage">
 			<div class="part1">
 				<div class="part1-left">
-					<img src="img/IMG_0055 2.jpg" alt="Profile Picture">
+					<img src="img/IMG_00552.jpg" alt="Profile Picture">
 				</div>
 				<div class="part1-right">
 					<h1>👋 Hello</h1>
