--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<p2>Hi, I'm Yulan Zhang, an interaction designer who believes that "user experience should be like a montage - no need for words". I'm currently pursuing my master's degree in Interaction Design at California College of the Arts, and every day I'm thinking about how to turn the user's little thoughts into a "wow" interface design on the screen.</p2	>
 					<div class="part1-right-button">
 						<div class="part1-right-button-1">
-							<a href="#">Resume</a>
+							<a href="index2.html">Resume</a>
 						</div>
 						<div class="part1-right-button-2">
 							<a href="#">Projects</a>
