--- a/index5.html
+++ b/index5.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="stylesheet/style5.css">
-        <title>Corti.ai Project - Yulan Zhang Portfolio</title>
+        <title>CREATIVEDAVID Project - Yulan Zhang Portfolio</title>
 		<!-- 通过Google Fonts导入 -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,15 +28,15 @@
 
     <div class="project-container">
         <div class="project-header">
-            <h1>Corti: building a visual identity that bridges healthcare and AI</h1>
+            <h1>CREATIVEDAVID</h1>
             <p class="project-intro">Designing a clear, trustworthy look for a complex, high-impact product.</p>
         </div>
 
         <div class="project-info-container">
             <div class="info-card">
                 <h2>Project overview</h2>
-                <p class="team-info">Team: Robert Vagin, Kira Tiemirshyna, Dima Lepokhin</p>
-                <p class="created-at">Created at: heartbeat.ua</p>
+                <p class="team-info">Team: Yulan Zhang，Liyun Xue</p>
+                <p class="created-at">Created at: 04.2025</p>
             </div>
 
             <div class="info-card">
