--- a/index2.html
+++ b/index2.html
@@ -20,7 +20,7 @@
 				</div>
 				<nav>
 					<a href="index2.html">Resume</a>
-					<a href="#">Projects</a>
+					<a href="index3.html">Projects</a>
 					<a href="#">Contact</a>
 				</nav>
 			</div>
