--- a/index3.html
+++ b/index3.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="stylesheet/style.css">
+		<link rel="stylesheet" href="stylesheet/style3.css">
         <title>Yulan Zhang Portfolio</title>
 		
 		<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,11 +14,11 @@
 
 
 	</head>
-	<body>
-		<div class="menu">
+    <body>
+        <div class="menu">
 			<div class="header">
 				<div class="logo">
-					<span>Yulan Zhang</span>
+					<span><a href="index.html">Yulan Zhang</a></span>
 				</div>
 				<nav>
 					<a href="index2.html">Resume</a>
@@ -27,53 +27,25 @@
 				</nav>
 			</div>
 		</div>
-	
-		<div class="homepage">
-			<div class="part1">
-				<div class="part1-left">
-					<img src="img/IMG_00552.jpg" alt="Profile Picture">
-				</div>
-				<div class="part1-right">
-					<h1>👋 Hello</h1>
-					<h2>A Bit About Me</h2>
-					<p1>你好呀，我是张宇岚，一个坚信用户体验应该像蒙太奇一样——不必多言的交互设计师。目前正在加州艺术学院攻读交互设计硕士，每天琢磨着怎么把用户的小心思变成屏幕上让人"哇哦"的界面设计。</p1>
-					<p2>Hi, I'm Yulan Zhang, an interaction designer who believes that "user experience should be like a montage - no need for words". I'm currently pursuing my master's degree in Interaction Design at California College of the Arts, and every day I'm thinking about how to turn the user's little thoughts into a "wow" interface design on the screen.</p2	>
-					<div class="part1-right-button">
-						<div class="part1-right-button-1">
-							<a href="index2.html">Resume</a>
-						</div>
-						<div class="part1-right-button-2">
-							<a href="index3.html">Projects</a>
-						</div>
-						<div class="part1-right-button-3">
-							<a href="#">Contact	</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<section class="part2">
+
+        <section class="part2">
 			<div class="part2-discription">
 				<h3>Tiny fraction of my work</h3>
 				<p>Here are some of my projects that I've worked on. I'm always looking for new challenges and opportunities to learn and grow. If you're interested in collaborating, please don't hesitate to reach out.</p>
 			</div>
 			<div class="part2-projects">
 				<div class="part2-projects-1">
-					<a href="index4.html">
 					<div class="project-info">
 						<h4>Mood Sync</h4>
 						<p>UX/UI Design, Product Design</p>
 					</div>
-					</a>
 				</div>
-
 				<div class="part2-projects-2">
 					<div class="project-info">
 						<h4>Solaris</h4>
 						<p>UX/UI Design, Product Design</p>
 					</div>
 				</div>
-				
 				<div class="part2-projects-3">
 					<a href="index5.html">
 						<div class="project-info">
@@ -84,5 +56,6 @@
 				</div>
 			</div>
 		</section>
-	</body>
-</html>
+
+    </body>
+</html> 
