--- a/index3.html
+++ b/index3.html
@@ -34,18 +34,25 @@
 				<p>Here are some of my projects that I've worked on. I'm always looking for new challenges and opportunities to learn and grow. If you're interested in collaborating, please don't hesitate to reach out.</p>
 			</div>
 			<div class="part2-projects">
-				<div class="part2-projects-1">
-					<div class="project-info">
-						<h4>Mood Sync</h4>
-						<p>UX/UI Design, Product Design</p>
-					</div>
-				</div>
+
 				<div class="part2-projects-2">
+					<a href="index6.html">
 					<div class="project-info">
 						<h4>Solaris</h4>
 						<p>UX/UI Design, Product Design</p>
 					</div>
+					</a>
 				</div>
+				
+				<div class="part2-projects-1">
+					<a href="index4.html">
+						<div class="project-info">
+							<h4>Mood Sync</h4>
+							<p>UX/UI Design, Product Design</p>
+						</div>
+					</a>
+				</div>
+		
 				<div class="part2-projects-3">
 					<a href="index5.html">
 						<div class="project-info">
