--- a/index4.html
+++ b/index4.html
@@ -102,7 +102,15 @@
             <div class="project-main-info-HMW">
                 <img src="img/hmw.png" >
             </div>
-            
+            <div class="project-main-info-persona">
+                <img src="img/persona.png" >
+            </div>
+            <div class="project-main-info-low">
+                <img src="img/low.png" >
+            </div>
+            <div class="project-main-info-high">
+                <img src="img/Frame.png" >
+            </div>
         </div>
     </div>
     
